# youcode-ai-agent

./: .env.example  .gitignore  alembic.ini  compose.yaml  main.py  pyproject.toml  script_create_collection.py  script_index_documents.py
data/: youcode_context.py  youcode_documents.py
data/admin_drafts/: logement.txt
data/database/: parent_documents.json
data/documents/: youcode.md  youcode.txt
data/documents/admission/: inscription.txt
data/documents/campus/: nador.txt  safi.txt  youssoufia.txt
data/documents/general/: presentation.txt
data/documents/pedagogy/: principes.txt
data/documents/program/: cursus.txt
migrations/: env.py
migrations/versions/: 71e5422af370_add_awaiting_candidate_confirmation_.py  cb6bcad2b7e7_create_initial_tables.py
models/: guide_respons.py
prompts/: examples.py  rag_prompt.py  system_prompt.py
scripts/: create_knowledge_article.py  ingest_documents.py  ingest_knowledge_article.py  init_vector_store.py  initialize_database.py  manage_knowledge_articles.py  manage_knowledge_gaps.py  run_agent.py  run_rescheduling_agent.py  test_guide_agent.py  test_multi_agent.py  test_support_workflow.py  test_test_session_api.py  update_registration_status.py  verify_knowledge_article.py
services/: embedding_service.py  ollama_service.py  qdrant_service.py  rag_service.py  vector_index.py
services/fake_registration_api/: pyproject.toml
services/fake_registration_api/app/: main.py  schemas.py  store.py
services/fake_test_session_api/: data.py  main.py  schemas.py
src/fake_test_session_api/: __init__.py  app.py  data.py  models.py
src/youcode_ai_guide/: cli.py  config.py  ingestion.py  loaders.py  memory.py  models.py  prompts.py  rag.py  retriever.py
src/youcode_ai_guide/agent/: agent.py  prompts.py
src/youcode_ai_guide/rag/: embeddings.py  loaders.py  rag.py  retriever.py  splitter.py  vector_store.py
src/youcode_guide/: config.py  llm.py  models.py
src/youcode_guide/agent/: context.py  factory.py  middleware.py  prompt.py  service.py
src/youcode_guide/api/: app.py
src/youcode_guide/cli/: app.py  consent_manager.py
src/youcode_guide/consent/: models.py  repository.py  service.py
utils/: similarity.py
(+243 files in other folders)
