[project]
name = "youcode-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.5",
    "email-validator>=2.3.0",
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "langchain>=1.3.14",
    "langchain-google-genai>=4.3.0",
    "langchain-ollama>=1.1.0",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.9",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "apps/api/src" }

[tool.setuptools.packages.find]
where = ["apps/api/src"]
include = ["youcode_ai*"]

[tool.pytest.ini_options]
pythonpath = [
    "apps/api/src",
]
testpaths = [
    "apps/api/tests",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]